# drop-merge-sort

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build_and_run.sh  plot.gp
.github/workflows/: rust.yml
data/: drop_merge_sort.data  example.data  quicker_sort.data  speedup_over_quickersort.data  std_sort.data
data/i32/: dmsort_copy_sort.data  dmsort_copy_speedup.data  dmsort_move_sort.data  dmsort_move_speedup.data  num_dropped.data  quicker_sort.data  std_sort.data
data/string/: drop_merge_sort.data  quicker_sort.data  speedup_over_quickersort.data  std_sort.data
docs/: search-index.js
docs/dmsort/: fn.sort.html  fn.sort_by.html  fn.sort_by_key.html  fn.sort_copy.html  index.html  sidebar-items.js
docs/dmsort/dmsort/: fn.sort.html  fn.sort_by.html  fn.sort_by_key.html  fn.sort_copy.html
docs/pdqsort/: fn.sort.html  fn.sort_by.html  fn.sort_by_key.html  index.html  sidebar-items.js  sort_by.v.html
docs/src/dmsort/: dmsort.rs.html  lib.rs.html
docs/src/dmsort/src/: dmsort.rs.html  lib.rs.html
docs/src/pdqsort/: lib.rs.html
examples/: example.rs
rustdoc/dmsort/: fn.sort.html  fn.sort_copy.html  sort_copy.v.html
rustdoc/src/dmsort/: dmsort.rs.html  lib.rs.html
src/: dmsort.rs  lib.rs  main.rs
tests/: benchmark.rs  example.rs  tests.rs
