[package]
name = "dmsort"
version = "0.1.3"
authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
description = """
Fast adaptive sorting for when most of your data is already in order.
dmsort can be 2-5 times faster than Rust's default sort when more than 80% of the elements are already in order.
"""
documentation = "https://emilk.github.io/drop-merge-sort/dmsort/index.html"
repository = "https://github.com/emilk/drop-merge-sort"
readme = "README.md"
keywords = ["sorting", "sort", "adaptive"]
categories = ["algorithms"]
license = "MIT"
include = [ "**/*.rs", "Cargo.toml", ]

[lib]
name = "dmsort"
path = "src/lib.rs"
test = false
bench = false

[dev-dependencies]
gnuplot = "0.0.22"
pbr = "1.0.0"
quickersort = "2.2.0"
rand = "0.3.15"
time = "0.1.37"
